--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <ul>
-    <li class="leftlink">About</li>
-    <li class="leftlink">Store</li>
-    <li class="rightlink">Gmail</li>
-    <li class="rightlink">Images</li>
-    <li class="rightlink">Google Apps Icon</li>
-    <li class="rightlink">Notifications Icon</li>
-    <li class="rightlink">User Icon</li>
+    <li class="leftlink">Home</li>
+    <li class="leftlink">Updates</li>
+    <li class="rightlink">About this Site</li>
+    <li class="rightlink">About AGF</li>
+    <li class="rightlink">Contact</li>
 </ul>
 <div align=center>
     <div>
-    <img src="googlelogo.jpg">
+    <img src="deadrose.jpeg">
     </div>
 <div>
 <form>
@@ -22,10 +20,10 @@
 </form>
 <form>
     <button name="search">
-        Google Search
+        Search the FAQ
     </button>
     <button name="random">
-        I Feel Lucky
+        Random Page
     </button>
 </form>
 <p><a href="#">Watch something horrible on YouTube at 9p ET</a></p>
@@ -33,10 +31,9 @@
 </div>
 <div id="footer">
 <ul>
-    <li class="leftlink">Advertising</li>
-    <li class="leftlink">Business</li>
-    <li class="rightlink">Privacy</li>
-    <li class="rightlink">Terms</li>
-    <li class="rightlink">Settings</li>
+    <li class="leftlink">Disclaimer</li>
+    <li class="rightlink">Built by Nick</li>
+    <li class="rightlink">Creative Commons</li>
+    
 </ul>
 </div>
